# Owner-Property-Management-AI-SPA

./: .gitignore  .lintstagedrc.json  .mcp.json  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  FILE_CREATION_CHECKLIST.md  FR+NFR Project Management-Owner Real Estate Agent SaaS.xlsx  FR+NFR Project Management-Owner, Real Estate Agent SaaS.xlsx  FR+NFR Project Management-Owner, Real Estate Agent SaaS_修正版_20260124_044208_完整版_20260124_044913.xlsx  FR+NFR+2026-01-15.csv  FR+NFR+2026-01-15.md  Owner Property Management AI Project.xlsx  Owner Property Management AI Project_backup_20260130_214510.xlsx  Owner Property Management AI Project_backup_20260130_214516.xlsx  PHASE_ONE_CHECKLIST.md  PHASE_ONE_COMPLETE.md  PHASE_ONE_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  completed_tables_checklist.txt  create_requirements.py  eslint.config.js  excel_tables_analysis.json  export-env.sh  package-lock.json  package.json  pending_tables_analysis.txt  quick-start.sh  remaining_tables_output.txt  requirements.md  setup-phase-one.sh  start-dev.sh  turbo.json  update_fr_nfr_excel.py  verify-mcp-servers.py  verify-mcp-servers.sh  専項文件歸檔總則.md  專案架構.md  (+3 more)
.claude/: .mcp.json  CLAUDE.md  (+1 more)
backend/ocr_service/: .gitignore  OCR DEVELOPMENT_SUMMARY.md  OCR PHASE2_COMPLETE.md  QUICKSTART-OCR Service 快速入門.md  README-OCR Service for Building Title Transcripts.md  TDD_PROGRESS-OCR Service TDD 開發進度報告.md  TEST_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
backend/ocr_service/examples/: complete_workflow.py
backend/ocr_service/src/: __init__.py
(+1166 files in other folders)
